# husky-autonomous-inspection

./: .gitignore  Dockerfile  README.md  run.sh
.devcontainer/: devcontainer.json
config/: robot.urdf.xacro  robot.yaml  slam_params.yaml
scripts/: hold_teleop.py  save_map.sh  setup.sh  start_mapping.sh  start_sim.sh  teleop.sh
src/slam_mapping/: package.xml  setup.py
src/slam_mapping/config/: slam_params.yaml
src/slam_mapping/launch/: slam.launch.py
