<?xml version="1.0"?>
<package format="3">
  <name>slam_mapping</name>
  <version>0.1.0</version>
  <description>SLAM mapping launch and config for Husky autonomous inspection</description>
  <maintainer email="">Max</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
